fix: navbar and navigation menu z-index

--- a/src/dashkit/Navbar/navbar.css
+++ b/src/dashkit/Navbar/navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navbar--sticky {
-  @apply sticky top-0 z-50;
+  @apply sticky top-0 z-[1000];
 }
 
 .navbar--blur {
